--- a/project.html
+++ b/project.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Вопросы по HTML</title>
     <style>
         body {
@@ -15,7 +15,6 @@
         footer {
             left: 0;
         }
-      
       body {
           overflow-y: scroll;
       }
